# phino

./: .0pdd.yml  .gitattributes  .gitignore  .hlint.yaml  .pdd  .rultor.yml  AST.html  Builder.html  Bytes.html  CLAUDE.md  CLI-Helpers.html  CLI-Parsers.html  CLI-Runners.html  CLI-Types.html  CLI-Validators.html  CLI.html  CST.html  Canonizer.html  Condition.html  Dataize.html  Deps.html  Encoding.html  Files.html  Filter.html  Functions.html  LaTeX.html  Lining.html  Locator.html  Logger.html  Makefile  Margin.html  Matcher.html  Merge.html  Misc.html  Must.html  Parser.html  Printer.html  README.md  REUSE.toml  Random.html  (+44 more)
.github/: typos.toml
.github/scripts/: bench-compare.py  bench-compare.sh
.github/workflows/: actionlint.yml  benchmark.yml  cabal.yml  codecov.yml  copyrights.yml  coverage.yml  deps-sentinel.yml  fourmolu.yml  haddock.yml  hlint.yml  jeo-update.yml  latex.yml  markdown-lint.yml  pdd.yml  post-comment.yml  regression-check.yml  release-binary.yml  resources.yml  reuse.yml  shellcheck.yml  stack.yml  titles.yml  typos.yml  up.yml  xcop.yml  yamllint.yml
.reuse/: dep5
app/: Main.hs
benchmark/: Main.hs  mvnw  mvnw.cmd
resources/: alpha.yaml  contextualization.yaml  copy.yaml  dataization.yaml  dc.yaml  dd.yaml  dot.yaml  miss.yaml  morphing.yaml  normalize.yaml  null.yaml  over.yaml  phi.yaml  stay.yaml  stop.yaml
resources/normalize/: alpha.yaml  amiss.yaml  copy.yaml  dc.yaml  dca.yaml  dd.yaml  dl.yaml  dot.yaml  miss.yaml  null.yaml  over.yaml  overa.yaml  phi.yaml  stay.yaml  stop.yaml
src/: ASCII.hs  AST.hs  AST.html  Ast.hs  Builder.hs  Builder.html  Bytes.hs  Bytes.html  CLI.Helpers.html  CLI.Parsers.html  CLI.Runners.html  CLI.Types.html  CLI.Validators.html  CLI.hs  CLI.html  CLIOptions.hs  CST.hs  CST.html  Canonizer.hs  Canonizer.html  Condition.hs  Condition.html  Dataize.hs  Dataize.html  Deps.hs  Deps.html  Encoding.hs  Encoding.html  Files.hs  Files.html  Filter.hs  Filter.html  Functions.hs  Functions.html  Hide.hs  IOFormat.hs  LaTeX.hs  LaTeX.html  Lining.hs  Lining.html  (+43 more)
src/CLI/: Helpers.hs  Parsers.hs  Runners.hs  Types.hs  Validators.hs
test/: ASTSpec.hs  BuilderSpec.hs  CLISpec.hs  CSTSpec.hs  ConditionSpec.hs  DataizeSpec.hs  FilterSpec.hs  FunctionsSpec.hs  HLintSpec.hs  HideSpec.hs  LaTeXSpec.hs  LiningSpec.hs  LocatorSpec.hs  Main.hs  MatcherSpec.hs  MergeSpec.hs  MiscSpec.hs  MustSpec.hs  ParserSpec.hs  PrettySpec.hs  PrinterSpec.hs  README.md  RandomSpec.hs  RegexpSpec.hs  ReplacerSpec.hs  RewriterSpec.hs  RuleSpec.hs  Spec.hs  SugarSpec.hs  TauSpec.hs  XMIRSpec.hs  YamlSpec.hs
test-resources/cli/: bytes.phi  desugar.phi  dispatch.phi  evaluate-in-rewrite.yaml  first.yaml  foo.phi  infinite.yaml  labeled.yaml  lambda-in-rewrite.yaml  morph-in-rewrite.yaml  normalize.phi  number.phi  second.yaml  simple.yaml  string.phi  with-$this-attribute.phi
test-resources/condition-packs/: absolute-application.yaml  absolute-dispatch.yaml  absolute-formation.yaml  absolute-global.yaml  absolute-this.yaml  add.yaml  alpha-simple.yaml  and-fails.yaml  and-multiple.yaml  disjoint-clean.yaml  eq-to-rho.yaml  eq-with-attributes.yaml  eq-with-expressions.yaml  eq-with-formations.yaml  eq-with-two-meta-attributes.yaml  eq-with-two-meta-expressions.yaml  gt-domain.yaml  in-missing.yaml  in-simple.yaml  in-void.yaml  length.yaml  match.yaml  matches-with-line-bounds.yaml  matches.yaml  nf-dispatch-global.yaml  nf-dispatch-this.yaml  nf-dot-recursive.yaml  nf-empty-formation.yaml  nf-formation-with-delta.yaml  nf-formation-with-void.yaml  nf-global.yaml  nf-on-dot.yaml  nf-on-phi.yaml  nf-simple.yaml  nf-termination.yaml  nf-this.yaml  not-alpha.yaml  not-disjoint-delta.yaml  not-disjoint-lambda.yaml  not-eq.yaml  (+25 more)
test-resources/cst/printing-packs/: basic.yaml  dispatch.yaml  jeo.yaml  non-primitive-data-object.yaml  primitives-without-rhos.yaml  simple.yaml  sweet-inlined.yaml  with-void-rho-between.yaml  xi-attribute.yaml
test-resources/cst/to-ascii-packs/: complex.yaml
test-resources/cst/to-salty-packs/: application-with-alphas.yaml  application.yaml  default-package.yaml  primitives-with-rhos.yaml  with-inlined-voids.yaml  with-num-and-void-rho.yaml  xi-attr.yaml
test-resources/cst/to-singleline-packs/: application.yaml  empty-formation.yaml  with-inlined-voids.yaml
test-resources/filter-packs/: complex.yaml  org-eolang.yaml  show-hide.yaml  show.yaml  simple.yaml  stop.yaml  with-attributes.yaml  with-void.yaml
test-resources/hide-packs/: complex.yaml  org-eolang.yaml  simple.yaml  stop.yaml  with-attributes.yaml  with-void.yaml
test-resources/parser-packs/: all-the-basics.phi  ascii-with-braces.phi  ascii-with-global.phi  inline-voids.phi  primitive.phi  salty-fibo.phi  simple.phi  sweet-fibo.phi  virtual-map.phi
test-resources/phi-typos-packs/: delta-in-application.phi  duplicated-attributes.phi  wrong-function-name.phi
test-resources/rewriter-packs/: desugar-fibo.yaml  desugares.yaml  from-formation-to-application.yaml  negative-condition.yaml  with-alpha-condition.yaml  with-complex-condition.yaml  with-eq-condition.yaml  with-simple-condition.yaml
test-resources/rewriter-packs/basic/: alpha-first.yaml  alpha-fourth.yaml  alpha-second.yaml  alpha-simple.yaml  alpha-skips-delta-asset.yaml  alpha-skips-lambda-asset-hits-rho.yaml  alpha-skips-lambda-asset-out-of-range.yaml  alpha-skips-lambda-asset.yaml  alpha-stops-at-idx.yaml  alpha-stops-at-length.yaml  copy-paper-e1.yaml  copy-paper-e4-dispatch.yaml  copy-simple.yaml  copy-with-tail.yaml  (+31 more)
test-resources/xmir/: program.phi  program.xmir
test-resources/xmir-parsing-packs/: application-with-dispatch.yaml  application.yaml  atoms.yaml  base-dispatch.yaml  formation-dispatch.yaml  formation.yaml  reverse-dispatch.yaml  simple.yaml  with-duplicate-attribute.yaml  with-package.yaml  with-phi.yaml
test-resources/xmir-printing-packs/: application.yaml  simple.yaml
test-resources/yaml-packs/: simple.yaml  special-attrs-in-condition.yaml  when.yaml  where-without-args.yaml
test-resources/yaml-typos/: two-condition-objects.yaml  wrong-condition-name.yaml
(+113 files in other folders)
