cabal-version:      3.0

name:               phino
version:            0.0.0.0
license:            MIT
synopsis:           Command-Line Manipulator of ğœ‘-Calculus Expressions
description:        Please see the README on GitHub at <https://github.com/objectionary/phino#readme>
homepage:           https://github.com/objectionary/phino#readme
bug-reports:        https://github.com/objectionary/phino/issues
license-file:       LICENSES/MIT.txt
author:             maxonfjvipon
maintainer:         mtrunnikov@gmail.com
copyright:          2025 Objectionary.com
category:           Language, Code Analysis
build-type:         Simple
extra-source-files: resources/*.yaml

source-repository head
  type: git
  location: https://github.com/objectionary/phino

common warnings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wno-missing-export-lists

library
  exposed-modules:
    CLI,
    Ast,
    Parser,
    Matcher,
    Builder,
    Replacer,
    Rewriter,
    Yaml,
    Rule,
    Dataize,
    Functions,
    Term,
    Misc,
    Must,
    Logger,
    Regexp,
    Pretty,
    Random,
    XMIR
  hs-source-dirs: src
  other-modules:
    Paths_phino
  autogen-modules:
    Paths_phino
  build-depends:
    file-embed ^>=0.0.16.0,
    base >=4.18.3.0 && <5,
    containers,
    megaparsec >= 9.0,
    text,
    aeson,
    yaml,
    directory,
    filepath,
    scientific,
    binary-ieee754,
    bytestring,
    utf8-string,
    prettyprinter,
    optparse-applicative,
    vector,
    random,
    xml-conduit ^>=1.10,
    time ^>=1.12,
    transformers,
    regex-pcre-builtin,
    array
  default-language: Haskell2010

-- Executable using the library
executable phino
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    phino,
    base
  default-language: Haskell2010

-- Test suite for Matcher
test-suite spec
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  other-modules:
    Spec,
    CLISpec,
    ParserSpec,
    MatcherSpec,
    BuilderSpec,
    ReplacerSpec,
    PrettySpec,
    RewriterSpec,
    RuleSpec,
    YamlSpec,
    MiscSpec,
    XMIRSpec,
    DataizeSpec,
    Paths_phino
  autogen-modules:
    Paths_phino
  default-extensions:
    ImportQualifiedPost
  build-depends:
    optparse-applicative,
    base,
    megaparsec,
    phino,
    containers,
    hspec,
    hspec-core,
    filepath,
    prettyprinter,
    aeson,
    yaml,
    text,
    silently,
    directory,
    process,
    xml-conduit ^>=1.10
  build-tool-depends:
    hspec-discover:hspec-discover
  default-language: Haskell2010
