cabal-version: 3.0
name: phino
version: 0.0.0.0
license: MIT
synopsis: Command-Line Manipulator of ğœ‘-Calculus Expressions
description: Please see the README on GitHub at <https://github.com/objectionary/phino#readme>
homepage: https://github.com/objectionary/phino#readme
bug-reports: https://github.com/objectionary/phino/issues
license-file: LICENSES/MIT.txt
author: maxonfjvipon
maintainer: mtrunnikov@gmail.com
copyright: 2025 Objectionary.com
category: Language, Code Analysis
build-type: Simple
extra-source-files: resources/*.yaml
extra-doc-files: README.md

source-repository head
  type: git
  location: https://github.com/objectionary/phino

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wno-missing-export-lists

library
  import: warnings
  exposed-modules:
    AST
    Builder
    Canonizer
    CLI
    Condition
    CST
    Dataize
    Deps
    Encoding
    Filter
    Functions
    LaTeX
    Lining
    Locator
    Logger
    Matcher
    Merge
    Misc
    Must
    Parser
    Printer
    Random
    Regexp
    Render
    Replacer
    Rewriter
    Rule
    Sugar
    XMIR
    Yaml

  hs-source-dirs: src
  other-modules:
    Paths_phino

  autogen-modules:
    Paths_phino

  build-depends:
    aeson,
    array,
    base >=4.18.3.0 && <5,
    binary-ieee754,
    bytestring,
    containers,
    directory,
    file-embed ^>=0.0.16.0,
    filepath,
    megaparsec >=9.0,
    optparse-applicative,
    random,
    regex-pcre-builtin,
    scientific,
    text,
    time ^>=1.12,
    transformers,
    utf8-string,
    vector,
    xml-conduit ^>=1.10,
    yaml,

  default-language: Haskell2010

-- Executable using the library
executable phino
  import: warnings
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    base,
    phino,

  default-language: Haskell2010

-- Test suite for Matcher
test-suite spec
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    ASTSpec
    BuilderSpec
    CLISpec
    ConditionSpec
    CSTSpec
    DataizeSpec
    FilterSpec
    FunctionsSpec
    LaTeXSpec
    LiningSpec
    LocatorSpec
    MatcherSpec
    MergeSpec
    MiscSpec
    MustSpec
    ParserSpec
    Paths_phino
    PrinterSpec
    RandomSpec
    RegexpSpec
    ReplacerSpec
    RewriterSpec
    RuleSpec
    Spec
    SugarSpec
    XMIRSpec
    YamlSpec

  autogen-modules:
    Paths_phino

  default-extensions:
    ImportQualifiedPost

  build-depends:
    aeson,
    base,
    bytestring,
    containers,
    directory,
    filepath,
    hlint,
    hspec,
    hspec-core,
    megaparsec,
    optparse-applicative,
    phino,
    process,
    silently,
    text,
    xml-conduit ^>=1.10,
    yaml,

  build-tool-depends:
    hspec-discover:hspec-discover

  default-language: Haskell2010
