cabal-version: 3.0
name: phino
version: 0.0.0.0
license: MIT
synopsis: Command-Line Manipulator of 𝜑-Calculus Expressions
description: Please see the README on GitHub at <https://github.com/objectionary/phino#readme>
homepage: https://github.com/objectionary/phino#readme
bug-reports: https://github.com/objectionary/phino/issues
license-file: LICENSES/MIT.txt
author: maxonfjvipon
maintainer: mtrunnikov@gmail.com
copyright: 2025 Objectionary.com
category: Language, Code Analysis
build-type: Simple
extra-source-files: resources/*.yaml
extra-doc-files: README.md

source-repository head
  type: git
  location: https://github.com/objectionary/phino

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

library
  import: warnings
  exposed-modules:
    AST
    Builder
    Canonizer
    CLI
    CLI.Helpers
    CLI.Parsers
    CLI.Runners
    CLI.Types
    CLI.Validators
    Condition
    CST
    Dataize
    Deps
    Encoding
    Filter
    Functions
    LaTeX
    Lining
    Locator
    Logger
    Margin
    Matcher
    Merge
    Misc
    Must
    Parser
    Printer
    Random
    Regexp
    Render
    Replacer
    Rewriter
    Rule
    Sugar
    XMIR
    Yaml

  hs-source-dirs: src
  other-modules:
    Paths_phino

  autogen-modules:
    Paths_phino

  build-depends:
    aeson >=2.2.3 && <2.3,
    array >=0.5.4 && <0.6,
    base >=4.18.3.0 && <5,
    binary-ieee754 >=0.1.0 && <0.2,
    bytestring >=0.11.4 && <0.13,
    containers >=0.6.5 && <0.9,
    directory >=1.3.7 && <1.4,
    file-embed >=0.0.15 && <0.0.17,
    filepath >=1.4.200 && <1.5,
    megaparsec >=9.5 && <9.8,
    optparse-applicative >=0.18 && <0.20,
    random >=1.2 && <1.3,
    regex-pcre-builtin >=0.95.2 && <0.96,
    scientific >=0.3.7 && <0.4,
    text >=2.0.2 && <2.2,
    time >=1.12 && <1.15,
    utf8-string >=1.0.2 && <1.1,
    vector >=0.13.0 && <0.14,
    xml-conduit >=1.9 && <1.10,
    yaml >=0.11.8 && <0.12,

  default-language: Haskell2010

-- Executable using the library
executable phino
  import: warnings
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    base,
    phino,

  default-language: Haskell2010

-- Test suite for Matcher
test-suite spec
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    ASTSpec
    BuilderSpec
    CLISpec
    ConditionSpec
    CSTSpec
    DataizeSpec
    FilterSpec
    FunctionsSpec
    LaTeXSpec
    LocatorSpec
    MatcherSpec
    MergeSpec
    MiscSpec
    MustSpec
    ParserSpec
    Paths_phino
    PrinterSpec
    RandomSpec
    RegexpSpec
    ReplacerSpec
    RewriterSpec
    RuleSpec
    Spec
    XMIRSpec
    YamlSpec

  autogen-modules:
    Paths_phino

  default-extensions:
    ImportQualifiedPost

  build-depends:
    aeson >=2.2.3 && <2.3,
    base >=4.18.3.0 && <5,
    bytestring >=0.11.4 && <0.13,
    containers >=0.6.5 && <0.9,
    directory >=1.3.7 && <1.4,
    filepath >=1.4.200 && <1.5,
    hspec >=2.11.0 && <2.12,
    hspec-core >=2.11.0 && <2.12,
    megaparsec >=9.5 && <9.8,
    optparse-applicative >=0.18 && <0.20,
    phino,
    process >=1.6.17 && <1.7,
    silently >=1.2.5 && <1.3,
    text >=2.0.2 && <2.2,
    time >=1.12 && <1.15,
    xml-conduit >=1.9 && <1.10,
    yaml >=0.11.8 && <0.12,

  build-tool-depends:
    hspec-discover:hspec-discover >=2.11.0 && <2.12

  default-language: Haskell2010
